# sam3-auto-annotator

./: .gitignore  README.md  app.py  check_models.py  main.py  pyproject.toml  requirements.txt
config/: augmentations.py  logging_config.py  settings.py
docs/: agent.md  architecture.md  workflow.md
managers/: __init__.py  annotation_manager.py  augmentation_manager.py  dataset_manager.py  project_manager.py  video_manager.py
sam3/sam3/: model_builder.py
sam3/sam3/model/: decoder.py  position_encoding.py  sam3_image_processor.py
scripts/: annotate_worker.py  train_worker.py
ui/components/: sidebar.py
ui/pages/: annotate_page.py  organize_page.py  prompts_page.py  sample_test_page.py  summary_page.py  train_page.py  upload_page.py
utils/: __init__.py  file_utils.py  image_utils.py  log_parser.py
